--- a/.github/workflow/pre.yml
+++ b/.github/workflow/pre.yml
@@ -21,6 +21,10 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+     - uses: actions/checkout@v2
+        with:
+          fetch-depth: '3'
+          path: ./test
       - name: Setup Go environment
         uses: actions/setup-go@v3.2.1
         with:
@@ -34,4 +38,4 @@ jobs:
       - name: Print Paths
         run: |
           test_scope=${{ steps.ut-pr.outputs.paths }}
-          CGO_CFLAGS="-I${GITHUB_WORKSPACE}/matrixone/cgo" CGO_LDFLAGS="-L${GITHUB_WORKSPACE}/matrixone/cgo -lmo" go test -v -cover -run ^Test ${test_scope}
+          go test -v -cover -run ^Test ${test_scope}
