--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,5 +39,4 @@ jobs:
         run: |
           cd ${GITHUB_WORKSPACE}/test
           ls
-          test_scope=${{ steps.ut-pr.outputs.paths }}
-          go test -v -cover ${test_scope}
+          go test -v -cover -run ^Test ${{ steps.ut-pr.outputs.paths }}
