--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           fetch-depth: '3'
           path: ./test
-          repository: ${{ event.pull_request.sender }}/${{ event.pull_request.repository.name }}
+          repository: ${{ github.event.pull_request.sender }}/${{ github.event.pull_request.repository.name }}
       - name: Setup Go environment
         uses: actions/setup-go@v3.2.1
         with:
