--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,8 +37,7 @@ jobs:
           path: ./test
           repository: ${{ steps.ut-pr.outputs.resource }}
           ref: ${{ steps.ut-pr.outputs.branch }}
-      - name: Print Paths
+      - name: UT Code Coverage
         run: |
           cd ${GITHUB_WORKSPACE}/test
-          ls **/*
           go test -v -cover -run ^Test ${{ steps.ut-pr.outputs.paths }}
