--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
           # The Go version to download (if necessary) and use. Supports semver spec and ranges.
           go-version: '1.18'
       - name: Get PR Changed Paths
-        uses: guguducken/change-paths-action@ignore_modify
+        uses: guguducken/change-paths-action@master
         id: ut-pr
         with:
           github-token: ${{ secrets.ACTION_TOKEN }}
