--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,12 +40,11 @@ jobs:
           ref: ${{ steps.ut-pr.outputs.branch }}
       - name: UT Code Coverage
         run: |
-          echo "raw_ut_coverage='ut_coverage.raw'" >> $GITHUB_ENV
           cd ${GITHUB_WORKSPACE}/test
-          go test -v -cover -run ^Test ${{ steps.ut-pr.outputs.paths }} | grep -a -P "(?m)(?<=ok|\?){1}.*(?=%|])" | tee ${ raw_ut_coverage }
+          go test -v -cover ${{ steps.ut-pr.outputs.paths }} | grep -a -P "(?m)(?<=ok|\?){1}.*(?=%|])" | tee ut_coverage.raw
       - name: Coverage Calculate
         run: |
           cd ${GITHUB_WORKSPACE}/test
-          awk -F '[ %\t]+' '{if($1=="ok"){if($5 < 75) print "error: the code coverage of ",$2,"is ",$5%,"is below 75%";exit 1;} if($1 == "?"){print "error: There are no test files in this path -- ",$2;exit 1;}}' ${ raw_ut_coverage }
-          rm -rf ${{ env.raw_ut_coverage }}
+          awk -F '[ %\t]+' '{if($1=="ok"){if($5 < 75) print "error: the code coverage of ",$2,"is ",$5%,"is below 75%";exit 1;} if($1 == "?"){print "error: There are no test files in this path -- ",$2;exit 1;}}' ut_coverage.raw
+          rm -rf ut_coverage.raw
           echo "ut_coverage finished"
