--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,10 +44,10 @@ jobs:
       - name: UT Code Coverage
         run: |
           cd ${GITHUB_WORKSPACE}/test
-          go test -v -cover ${{ steps.ut-pr.outputs.paths }} | grep -a -P "(?m)(?<=ok|\?){1}.*(?=%|])" | tee ${raw_ut_coverage}
+          go test -v -cover ${{ steps.ut-pr.outputs.paths }} | grep -a -P "(?m)(?<=ok|\?){1}.*(?=%|])" | tee ${{ env.raw_ut_coverage}}
       - name: Coverage Calculate
         run: |
           cd ${GITHUB_WORKSPACE}/test
-          awk -F '[ %\t]+' '{if($1=="ok"){if($5 == "[no"){print "warning: please move tested code file to "$2;} else if($5 < 60) {print "error: the code coverage of "$2" is ",$5,"% is below 60%";} else {print "The code coverage of "$1" is "$5"%, this is up to standard"}} else if($1 == "?"){print "error: There are no test files in this path -- "$2;}}' ${raw_ut_coverage}
-          rm -rf ${raw_ut_coverage}
+          awk -F '[ %\t]+' '{if($1=="ok"){if($5 == "[no"){print "warning: please move tested code file to "$2;} else if($5 < 60) {print "error: the code coverage of "$2" is ",$5,"% is below 60%";} else {print "The code coverage of "$1" is "$5"%, this is up to standard"}} else if($1 == "?"){print "error: There are no test files in this path -- "$2;}}' ${{ env.raw_ut_coverage}}
+          rm -rf ${{ env.raw_ut_coverage}}
           echo "ut_coverage finished"
