--- a/.github/workflows/codeowner.yml
+++ b/.github/workflows/codeowner.yml
@@ -29,10 +29,10 @@ jobs:
           ignore: ".txt"
           sizes: >
             {
-              "xs":0,
-              "s":10,
-              "m":100,
-              "l":500,
-              "xl":1000,
-              "xxl":2000
+              "XS":0,
+              "S":10,
+              "M":100,
+              "L":500,
+              "XL":1000,
+              "XXL":2000
             }
