--- a/.github/workflows/codeowner.yml
+++ b/.github/workflows/codeowner.yml
@@ -26,7 +26,7 @@ jobs:
         id: ut-pr
         with:
           size_token: ${{ secrets.ACTION_TOKEN }}
-          ignore: ".txt"
+          ignore: ".txt,.pb.go"
           sizes: >
             {
               "XS":0,
