--- a/.github/workflows/milestone.yml
+++ b/.github/workflows/milestone.yml
@@ -10,4 +10,8 @@ jobs:
       - uses: guguducken/milestone-add-action@main
         with:
           action-token: ${{ secrets.ACTION_TOKEN}}
+          milestones: >
+            {
+              [BUG]:v0.0.1
+            }
     
