--- a/.github/workflows/milestone.yml
+++ b/.github/workflows/milestone.yml
@@ -12,5 +12,5 @@ jobs:
           action-token: ${{ secrets.ACTION_TOKEN}}
           co-milestones: >
             {
-              "\[BUG\]":"v0.0.1",
+              "[BUG]":"v0.0.1"
             }
