--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,12 +42,12 @@ jobs:
         run: |
           echo "raw_ut_coverage='ut_coverage.raw'" >> $GITHUB_ENV
       - name: UT Code Coverage
-        if: ${{ steps.ut-pr.outputs.paths }} != ''
+        if: ${{ steps.ut-pr.outputs.paths != '' }}
         run: |
           cd ${GITHUB_WORKSPACE}/test
           go test -v -cover ${{ steps.ut-pr.outputs.paths }} | grep -a -P "(?m)(?<=ok|\?){1}.*(?=%|])" | tee ${{ env.raw_ut_coverage}}
       - name: Coverage Calculate
-        if: ${{ steps.ut-pr.outputs.paths }} != ''
+        if: ${{ steps.ut-pr.outputs.paths != '' }}
         run: |
           echo ${{ steps.ut-pr.outputs.paths }}
           cd ${GITHUB_WORKSPACE}/test
